_get scream, comment on scream, like, unlike and delete scream routes
_for user, get own user and other user route and mark notifications read route

_added like count, commentCount and imageUrl return for posting of scream

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,19 @@
     },
     "ui": {
       "enabled": true
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
     }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
