--- a/functions/package.json
+++ b/functions/package.json
@@ -2,14 +2,14 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
+    "serve": "firebase emulators:start --only functions, firestore",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions, firestore",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "8"
   },
   "main": "index.js",
   "dependencies": {
